feat. can create without bounds

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,11 @@ html {
   object-fit: cover;
 }
 
+#demoSelf {
+  width: 650px;
+  height: 650px;
+}
+
 .section__ch {
   display: grid;
   grid-template-columns: 650px 650px;
