--- a/src/styles.css
+++ b/src/styles.css
@@ -15,15 +15,41 @@ html {
   /* justify-content: center; */
 }
 
+#canvasCuttieDiv {
+  position: relative;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  /* overflow: hidden; */
+}
+
+#canvasCuttie {
+  z-index: 2; 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  position: absolute; 
+  background: transparent;
+}
+
 #resultTiny {
   width: 100%;
   height: 365px;
   object-fit: cover;
 }
 
+#cuttieBg {
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  position: absolute;
+}
+
 #demoSelf {
-  width: 650px;
-  height: 650px;
+  width: 100%;
+  height: 600px;
+  /* overflow: scroll; */
 }
 
 .section__ch {
