--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,21 @@ html {
 
 #canvasCuttieDiv {
   position: relative;
-  background-color: white;
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.canvasCuttieDivImageBg::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ffffff80;
+  filter: blur(10px);
 }
 
 #canvasCuttie {
