--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,30 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Lexend Mega', Courier, monospace;
+  font-weight: 500;
+  letter-spacing: 2px;
+  box-sizing: border-box;
 }
+
 html {
-  background-color: #efefef;
+  background-color: #3e3e3e;
 }
-.section {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+.input, .btn {
+  background: none;
+  outline: none;
+  border: none;
 }
 
 #canvasCuttieDiv {
@@ -42,12 +55,6 @@ html {
   background: transparent;
 }
 
-#resultTiny {
-  width: 100%;
-  height: 365px;
-  object-fit: cover;
-}
-
 #cuttieBg {
   z-index: 1;
   top: 50%;
@@ -56,70 +63,156 @@ html {
   position: absolute;
 }
 
-#demoSelf {
-  width: 100%;
-  height: 600px;
-  /* overflow: scroll; */
-}
 
-.section__ch {
-  display: grid;
-  grid-template-columns: 650px 650px;
-  gap: 20px;
-  justify-content: center;
-  /* align-items: center; */
-  width: 100%;
-}
 
-.section__ch article {
-  width: 650px;
-  border: 1px solid #333;
-}
 
-.result {
-  width: 650px;
-  object-fit: contain;
-}
-
-.section__btns {
+.body {
+  max-width: 1400px;
+  margin: 0 auto;
   display: flex;
-  gap: 20px;
+  height: 100vh;
 }
 
-.subtitle {
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-align: center;
+.header {
+  background: #ffa600;
+  display: flex;
+  width: 298px;
+  padding: 24px;
+  gap: 2rem;
+  flex-direction: column;
 }
 
-.title {
-  font-size: 2.5rem;
-  border-bottom: 3px solid #333333;
-  margin-bottom: 1rem;
+.logo {
+  width: 250px;
 }
 
-.main-btn {
-  background-color: transparent;
-  margin: 0;
-  padding: 10px;
-  /* border-radius: 15px; */
-  width: 350px;
-  /* height: 40px; */
-  box-sizing: border-box;
+.h2 {
   font-size: 2rem;
-  font-weight: bold;
-  border: 2px solid #333;
+}
 
+.form {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form-cont {
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+  user-select: none;
+}
+
+.form-cont .label {
+  margin-left: 1rem;
+}
+
+.label {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
+
+.inputText {
+  border-bottom: 2px solid black;
+  width: 100%;
+  padding-left: .2rem;
   transition: all .3s linear;
 }
 
-.main-btn:hover {
-  border: 2px solid #222;
-  opacity: .8;
+.inputText:focus {
+  border-bottom: 2px solid #00000050;
+}
+
+.label:has(.inputChecked), .inputChecked {
   cursor: pointer;
 }
 
-.result {
+.dnd {
+  height: 150px;
+  border: 2px dashed #3e3e3e;
+  background-color: #f3f3f3;
+  display: flex;
+  padding: 8px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: auto;
+}
+
+.dnd__text {
+  width: 200px;
+}
+
+.dnd__label {
+  color: #ffa600;
+  cursor: pointer;
+}
+
+#dnd__ch {
+  display: none;
+  opacity: 0;
+  max-height: 0;
+}
+
+.main {
   width: 100%;
-  height: 365px;
+}
+
+.crop-windows {
+  padding: 1rem;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(1px, 350px));
+  gap: 1.75rem;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  text-align: center;
+}
+
+.crop-window__cropbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  height: 430px;
+  background: #f3f3f3 url('./asset/cuttie_short.svg') center center no-repeat;
+}
+
+.crop-window__title {
+  font-weight: 300;
+  white-space: unset;
+}
+
+.crop-window__result {
+  border: none;
+  outline: none;
+}
+
+.crop-btns {
+  width: min-content;
+  margin: 0 auto;
+  margin-top: 5rem;
+}
+
+.crop-btn {
+  width: 250px;
+  height: 80px;
+  background-color: #ffa600;
+  font-size: 2rem;
+  white-space: nowrap;
+  letter-spacing: 0;
+  cursor: pointer;
+}
+
+.crop-btn:last-child {
+  margin-top: 1rem;
+}
+
+#cuttie-result {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
