--- a/src/styles.css
+++ b/src/styles.css
@@ -129,7 +129,7 @@ input[type='number'] {
   cursor: pointer;
 }
 
-.dnd {
+#dnd {
   height: 150px;
   border: 2px dashed #3e3e3e;
   background-color: #f3f3f3;
