--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,12 @@
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 1000px) {
+  html {
+    font-size: 10px;
+  }
+}
+
 html {
   background-color: #3e3e3e;
 }
